<resources>
    <string name="app_name">StudentPal</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="let_s_get_started">Let\'s get Started</string>
    <string name="logo_name">logo name</string>
    <string name="intro_text_description">Connect and Plan Together across StudentPal\'s minimalistic interface</string>
    <string name="student_image_icon">student image icon</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="sign_in_description_text">Enter your email id and password, to sign in to your account</string>
    <string name="name">Name</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait…</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>
    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="no_boards_are_available">No Boards are available!!!</string>
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="change_event_date">Change Event Date</string>
    <string name="delete_card">Delete Card</string>
    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="str_select_card_color">Select Event Card Color</string>
    <string name="str_select_member">Select Member</string>
    <string name="existing_account_text">Already have an account with us? Click here</string>
    <string name="logo_icon">Logo icon</string>
    <string name="profile_image">profile image</string>
    <string name="dialog_message">Are you sure?</string>
    <string name="active_users">Active Users</string>
    <string name="messages">Messages</string>
    <string name="new_message">New Message</string>
    <string name="profile_name">Profile Name</string>
    <string name="status">Status</string>
    <string name="delete_account">Delete Account</string>
    <string name="message">Message</string>
    <string name="view_profile">View Profile</string>
    <string name="friends_num">Friends:</string>
    <string name="date_joined">Joined:</string>
    <string name="update_profile_card">You can modify your Profile card by updating your details below</string>
    <string name="search">Search</string>
    <string name="image_contentDescription">Select an image to be displayed as the event image</string>
    <string name="no_events">No events</string>
    <string name="event_description">Event Description</string>
    <string name="all_events">All Events</string>
    <string name="hello">Hello</string>
    <string name="add_task">Add Task</string>
    <string name="list_name">List Name</string>
    <string name="event_time">Event Time</string>
    <string name="event_location">Event Location</string>
    <string name="please_verify_email">Please Verify Email</string>
    <string name="verify_email">Verify Email</string>
    <string name="send">send</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="personal">Personal</string>
    <string name="social">Social</string>
    <string name="study">Study</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="event_name">Event Name</string>
    <string name="card_color">Card Color</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="default_notification_channel_id">studentpal_notification_channel_id</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="event_details">Event Details</string>
    <string name="address">Address:</string>
    <string name="location">Location:</string>
    <string name="more_information">More Information</string>
    <string name="notify_me">Notify Me</string>
    <string name="host">Host</string>
    <string name="write_a_caption_here">Write a caption here</string>
    <string name="no_images_posted">No Images Posted</string>
    <string name="posts">Posts</string>
    <string name="username">Username</string>
    <string name="title_activity_requests">RequestsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supersede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efficient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snack appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="cancelFriendRequest">Cancel Friend Request</string>
    <string name="acceptFriendRequest">Accept Friend Request</string>
</resources>