<?xml version="1.0" encoding="utf-8"?>
<!-- My Code -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.registration.IntroActivity"
    android:orientation="vertical"
    android:background="@color/bg_color"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="152dp"
        android:layout_marginTop="@dimen/intro_screen_title_text_marginTop"
        android:contentDescription="@string/logo_name"
        android:src="@drawable/logo_name_icon_transparent_background" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="165dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/student_image_icon"
        android:src="@drawable/student_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/let_s_get_started"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/lets_get_started_textSize" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/intro_text_description"
        android:textColor="@color/secondary_text_color"
        android:layout_marginVertical="@dimen/intro_text_marginTop"
        android:layout_marginStart="@dimen/intro_text_marginStartEnd"
        android:layout_marginEnd="@dimen/intro_text_marginStartEnd"
        android:lineSpacingExtra="@dimen/intro_text_line_spacing_extra"
        android:textSize="@dimen/intro_text_size"
        android:gravity="center"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_in_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background = "@drawable/shape_button_rounded"

        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/btn_marginStartEnd"
        android:layout_marginTop="@dimen/intro_screen_sign_up_btn_marginTop"
        android:layout_marginEnd="@dimen/btn_marginStartEnd"
        android:background = "@drawable/white_border_shape_button_rounded"
        android:gravity="center"
        android:text="@string/sign_up"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/btn_text_size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/logo_text_color"/>


</LinearLayout>