<?xml version="1.0" encoding="utf-8"?>

<!-- Citation: //www.youtube.com/watch?v=LxrsSUh5BMU -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPadding="5dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="190dp"
        android:layout_height="285dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:padding="2dp"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:src="@drawable/ic_round_account_circle_24">

        </de.hdodenhof.circleimageview.CircleImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/profile_name"
                android:textAlignment="center"
                android:textColor="#0A629D"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="#72777F"
                android:textSize="14sp"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="2dp"
                android:background="@color/secondary_text_color"/>



            <TextView
                android:id="@+id/civ_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/status"
                android:textAlignment="center"
                android:textColor="@color/secondary_text_color"
                android:textSize="14sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="2dp"
                android:background="@color/secondary_text_color">

            </View>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_view_profile"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_rounded"
                android:text="@string/view_profile"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@drawable/white_border_shape_button_rounded"
                android:text="@string/message"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>