<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:padding="@dimen/general_padding"
    tools:context=".SignUpActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_in_activity"
        android:layout_width="match_parent"
        android:theme="@style/ToolbarTheme"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_in"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="246dp"
        android:layout_height="94dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/logo_icon_transparent_background" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_description_text"
        android:gravity="center"
        android:textColor="@color/secondary_text_color"
        android:textSize="@dimen/authentication_description_text_size"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        android:background="@color/white"
        android:backgroundTint="@color/salmon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_view_layout_content_padding" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/secondary_text_color">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/et_text_size"
                    android:background="@color/bg_color"
                    android:textColor="@color/black">
                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd"
                android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                android:textColorHint="@color/secondary_text_color">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/et_text_size"
                    android:background="@color/bg_color"
                    android:textColor="@color/black">
                </androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/btn_marginStartEnd"
                android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                android:layout_marginEnd="@dimen/btn_marginStartEnd"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_button_rounded"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>